Bug 407622 - "Activity settings" section of Power Management kcm has unnecessary horizontal and vertical scroll bars
Summary: "Activity settings" section of Power Management kcm has unnecessary horizonta...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_powerdevil (other bugs)
Version First Reported In: 5.18.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-16 22:05 UTC by Patrick Silva
Modified: 2020-08-11 07:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-05-16 22:05:52 UTC
STEPS TO REPRODUCE
1. right click on the battery icon in the systray
2. select "Configure Power Saving..."
3. select "Activity settings" section in the left side

OBSERVED RESULT
unnecessary horizontal scroll bar is present

EXPECTED RESULT
there is no horizontal scroll bar

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.90
KDE Frameworks Version: 5.58.0
Qt Version: 5.13.0 beta3
Comment 1 Patrick Silva 2019-07-18 11:32:55 UTC
unnecessary vertical scroll bar is also present.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.16.3
KDE Frameworks Version: 5.60.0
Qt Version: 5.13.0
Comment 2 Bug Janitor Service 2020-08-08 16:10:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/19
Comment 3 Alexander Lohnau 2020-08-11 07:41:04 UTC
Git commit 671da4480222f93ab0d4ec855204ed553fdfae1b by Alexander Lohnau.
Committed on 08/08/2020 at 16:08.
Pushed by alex into branch 'master'.

Set min width of activities KCM to smaller value
FIXED-IN: 5.20

M  +1    -1    kcmodule/activities/activitypage.cpp

https://invent.kde.org/plasma/powerdevil/commit/671da4480222f93ab0d4ec855204ed553fdfae1b