Set min width of activities KCM to smaller value

BUG: 407622
FIXED-IN: 5.20